@@ -42,6 +42,8 @@
 - Bugfix: Removed a warning in the filterFilePath, in case kreXX
   was called via CLI.
 - Bugfix: Proper message output in case of a shell call.
+- Bugfix: Proper handling of dynamic declared class properties with
+  PHP forbidden chars.
 
 2.2.0
 - Added more search pattern and source code parsing to the
